<resources>
    <string name="app_name">Scavenger</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="one">Fragment One</string>
    <string name="two">Fragment Two</string>
    <string name="three">Fragment Three</string>


    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="locationCheckbox">Use Current Location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="description">Description</string>
    <string name="add_event">Add Event</string>
    <string name="title_activity_new_event">New Event</string>
    <string name="latitude_new">Latitude:</string>
    <string name="longitude_new">Longitude:</string>
    <string name="save_event">Save Event</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="imageUpload">Add Image</string>
    <string name="camera">Take Picture</string>
    <string name="photos">My Photos</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
